# dlt-duck

./: .gitignore  README.md  pyproject.toml  ruff.toml
integration/: db_source.py  oakland_api.py  pipeline.py
